--- a/register.html
+++ b/register.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>
-            Car rental
+            index drive
         </title>
         <link href="style.css" rel="stylesheet">
     </head>
@@ -16,16 +16,47 @@
                 <div class="register">
                     <div class="register-field">
                         <div class="cll">
-                            E-Mail:
+                            Фамилия:
                         </div>
                         <div class="cll">
                             <input type="text" class="text-input">
                         </div>
                     </div>
-                    
                     <div class="register-field">
                         <div class="cll">
-                            Логин:
+                            Имя:
+                        </div>
+                        <div class="cll">
+                            <input type="text" class="text-input">
+                        </div>
+                    </div>
+                    <div class="register-field">
+                        <div class="cll">
+                            Отчество:
+                        </div>
+                        <div class="cll">
+                            <input type="text" class="text-input">
+                        </div>
+                    </div>
+                    <div class="register-field">
+                        <div class="cll">
+                            Серия и номер паспорта:
+                        </div>
+                        <div class="cll">
+                            <input type="date" class="text-input">
+                        </div>
+                    </div>
+                    <div class="register-field">
+                        <div class="cll">
+                            Номер телефона:
+                        </div>
+                        <div class="cll">
+                            <input type="text" class="text-input">
+                        </div>
+                    </div>
+                    <div class="register-field">
+                        <div class="cll">
+                            Дата рождения:
                         </div>
                         <div class="cll">
                             <input type="text" class="text-input">
@@ -54,7 +85,4 @@
             </div>
         </div>
     </body>
-    <script src="main.js">
-
-    </script>
 </html>
