--- a/register.html
+++ b/register.html
@@ -15,7 +15,7 @@
         integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
     </head>
     <body>
-        <div id="content">
+        <div id="reg-content">
             <div id="reg-block">
                 <div class="button-panel" style="justify-self:start;font-size:2vh">
                     <div class="arrow-left"></div>
@@ -51,8 +51,9 @@
                             Серия и номер паспорта:
                         </div>
                         <div class="cll">
-                            <input type="date" class="text-input">
+                            <input type="text" class="text-input">
                         </div>
+                        
                     </div>
                     <div class="register-field">
                         <div class="cll">
@@ -67,7 +68,7 @@
                             Дата рождения:
                         </div>
                         <div class="cll">
-                            <input type="text" class="text-input">
+                            <input type="date" class="text-input">
                         </div>
                     </div>
                     <div class="register-field">
