--- a/car-select.html
+++ b/car-select.html
@@ -9,7 +9,6 @@
     <body>
         <div id="header">
             <div class="element" id="main-page-element" style="justify-self: start;" onclick="window.location.href='index.html';">
-                Index Drive
             </div>
             <div class="element" id="main-page-element" onclick="window.location.href='car-select.html';">
                 Аренда
@@ -49,6 +48,7 @@
                                             <div class=car-name>
                                                 Car Name
                                             </div>
+                                            <input type="button" class="button" value="Арендовать">
                                         </div>
                                     </div>
                                 </div>
@@ -61,6 +61,7 @@
                                             <div class=car-name>
                                                 Car Name
                                             </div>
+                                            <input type="button" class="button" value="Арендовать">
                                         </div>
                                     </div>
                                 </div>
@@ -75,6 +76,7 @@
                                             <div class=car-name>
                                                 Car Name
                                             </div>
+                                            <input type="button" class="button" value="Арендовать">
                                         </div>
                                     </div>
                                 </div>
@@ -87,6 +89,7 @@
                                             <div class=car-name>
                                                 Car Name
                                             </div>
+                                            <input type="button" class="button" value="Арендовать">
                                         </div>
                                     </div>
                                 </div>
@@ -101,7 +104,8 @@
                                             <div class=car-name>
                                                 Car Name
                                             </div>
-                                        </div>
+                                            <input type="button" class="button" value="Арендовать">
+                                        </div> 
                                     </div>
                                 </div>
                                 <div class=car-cell>
@@ -113,6 +117,7 @@
                                             <div class=car-name>
                                                 Car Name
                                             </div>
+                                            <input type="button" class="button" value="Арендовать">
                                         </div>
                                     </div>
                                 </div>
