--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <body>
         <div id="header">
             <div class="element" id="main-page-element" style="justify-self: start;">
-                Index Drive
             </div>
             <div class="element" id="main-page-element" onclick="window.location.href='car-select.html';">
                 Аренда
@@ -27,22 +26,25 @@
             </div>
             
         </div>
+
         <div id="content">
-            <div class="t-grid">
-                <div class="descr-grid dg-left" onclick="window.location.href='car-select.html';">
-                    <div id="e2" class="txt-elem cursor-pointer">
-                        &gt; &gt; &gt; Аренда Автомобиля
-                    </div>
-                    <div id="e1" class="img-elem cursor-pointer">
+            <div class="t-grid-bg">
+                <div class="t-grid">
+                    <div class="descr-grid dg-left" onclick="window.location.href='car-select.html';">
+                        <div id="e2" class="txt-elem cursor-pointer">
+                            &gt; &gt; &gt; Аренда Автомобиля
+                        </div>
+                        <div id="e1" class="img-elem cursor-pointer">
 
+                        </div>
                     </div>
-                </div>
-                <div class="descr-grid dg-right" onclick="window.location.href='branches.html';">
-                    <div id="e3" class="img-elem cursor-pointer">
+                    <div class="descr-grid dg-right" onclick="window.location.href='branches.html';">
+                        <div id="e3" class="img-elem cursor-pointer">
 
-                    </div>
-                    <div id="e4" class="txt-elem cursor-pointer">
-                        Наши филиалы &lt; &lt; &lt;
+                        </div>
+                        <div id="e4" class="txt-elem cursor-pointer">
+                            Наши филиалы &lt; &lt; &lt;
+                        </div>
                     </div>
                 </div>
             </div>
@@ -63,6 +65,7 @@
                 </div>
             </div>
         </div>
+        
         <div id=footer>
             <div class=page-block>
                 <div class=page-lists>
