--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="element font-l br-d3" onclick="window.location.href='car-select.html';">
                 Аренда
             </div>
-            <div class="element font-l br-d3" onclick="window.location.href='cards';">
+            <div class="element font-l br-d3" onclick="window.location.href='cards.html';">
                 Оплата
             </div>
             <div class="element font-l br-d3" onclick="window.location.href='branches.html';">
