--- a/register.html
+++ b/register.html
@@ -81,7 +81,7 @@
                         <input type="password" class="text-input">
                     </div>
                 </div>
-                    <input type="button" class="button bg-b font-l" id="cac-button" value="Создать">
+                    <input type="button" class="button bg-b font-l" id="cac-button" value="Зарегистрироваться">
                 
             </div>
         </div>
