--- a/car-select.html
+++ b/car-select.html
@@ -21,12 +21,6 @@
             <div class="element font-l br-d3" onclick="window.location.href='branches.html';">
                 О Нас
             </div>
-            <div class="element font-l br-d3" onclick="window.location.href = 'login.html';">
-                Вход
-            </div>
-            <div class="element font-l br-d3" onclick="window.location.href = 'register.html';">
-                Регистрация
-            </div>
         </div>
         <div id="content" class="bg-l">
             
@@ -164,5 +158,9 @@
                 Телефон: 8 (800) 555-35-3
             </div>
         </div>
+        <script src="load_header_profile.js"></script>
+        <script>
+            load_header_profile();
+        </script>
     </body>
 </html>
