--- a/index.html
+++ b/index.html
@@ -22,19 +22,13 @@
             <div class="element font-l br-d3" onclick="window.location.href='branches.html';">
                 О Нас
             </div>
-            <div class="element font-l br-d3" onclick="window.location.href = 'login.html';">
-                Вход
-            </div>
-            <div class="element font-l br-d3" onclick="window.location.href = 'register.html';">
-                Регистрация
-            </div>
         </div>
 
         <div id="content" class="bg-l">
             <div class="t-grid-bg">
                 <div class="t-grid">
                     <div class="descr-grid dg-left bg-d" onclick="window.location.href='car-select.html';">
-                        <div id="e2" class="txt-elem font-d2 cursor-pointer">
+                        <div id="e2" class="txt-elem font-l cursor-pointer">
                             &gt; &gt; &gt; Аренда Автомобиля
                         </div>
                         <div id="e1" class="img-elem cursor-pointer">
@@ -45,7 +39,7 @@
                         <div id="e3" class="img-elem cursor-pointer">
 
                         </div>
-                        <div id="e4" class="txt-elem cursor-pointer">
+                        <div id="e4" class="txt-elem font-l cursor-pointer">
                             Наши филиалы &lt; &lt; &lt;
                         </div>
                     </div>
@@ -101,6 +95,9 @@
                 Телефон: 8 (800) 555-35-3
             </div>
         </div>
-        <script src="session.js"></script>
+        <script src="load_header_profile.js"></script>
+        <script>
+            load_header_profile();
+        </script>
     </body>
 </html>
