--- a/register.html
+++ b/register.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <div class="full-bg">
-            <div id="reg-block" class="bg-l">
+            <div id="reg-block" class="bg-l singup-rows-template">
                 <div class="button-panel" style="justify-content:start;font-size:2em">
                     <div class="arrow-left br-d2"></div>
                     <input type="button" id="back-button" class="button font-d" value="Назад" onclick="window.location.href = 'index.html';">
@@ -85,5 +85,6 @@
                 
             </div>
         </div>
+        <script src="register.js"></script>
     </body>
 </html>
