--- a/login.html
+++ b/login.html
@@ -10,43 +10,12 @@
     </head>
     <body>
         <div class="full-bg">
-            <div id="reg-block" class="bg-l">
+            <div id="reg-block" class="bg-l singin-rows-template">
+                <div class="button-panel" style="justify-content:start;font-size:2em">
                     <div class="arrow-left br-d2"></div>
                     <input type="button" id="back-button" class="button font-d" value="Назад" onclick="window.location.href = 'index.html';">
-                
-                <div class="reg-grid">
-                    <div class="text-cell">
-                        <div class="text font-d">
-                            Фамилия:
-                        </div>
-                    </div>
-                    <div class="cell">
-                        <input type="text" class="text-input">
-                    </div>
-                    <div class="text-cell">
-                        <div class="text">
-                            Имя:
-                        </div>
-                    </div>
-                    <div class="cell">
-                        <input type="text" class="text-input">
-                    </div>
-                    <div class="text-cell">
-                        <div class="text">
-                            Отчество:
-                        </div>
-                    </div>
-                    <div class="cell">
-                        <input type="text" class="text-input">
-                    </div>
-                    <div class="text-cell">
-                        <div class="text">
-                            Серия и номер паспорта:
-                        </div>
-                    </div>
-                    <div class="cell">
-                        <input type="text" class="text-input">
-                    </div>
+                </div>
+                <div class="login-grid">
                     <div class="text-cell">
                         <div class="text">
                             Номер телефона:
@@ -54,14 +23,6 @@
                     </div>
                     <div class="cell">
                         <input type="text" class="text-input">
-                    </div>
-                    <div class="text-cell">
-                        <div class="text">
-                            Дата рождения:
-                        </div>
-                    </div>
-                    <div class="cell">
-                        <input type="date" class="text-input">
                     </div>
                     <div class="text-cell">
                         <div class="text">
@@ -80,9 +41,10 @@
                         <input type="password" class="text-input">
                     </div>
                 </div>
-                    <input type="button" class="button bg-b font-l" id="cac-button" value="Создать">
+                    <input type="button" class="button bg-b font-l" id="cac-button" value="Войти">
                 
             </div>
         </div>
+        <script src="register.js"></script>
     </body>
 </html>
