--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
                     </div>
                 </div>
             </div>
-            <div class="news-block bg-d">
+            <div class="news-block bg-d font-l">
                 <h1>
                     Новости
                 </h1>
-                <div class="news-grid">
+                <div class="news-grid ">
                     <div class=new>
                         a;sdjnf;asdnf;sandfasdfsa dfsafasdfgsdfg
                     </div>
