--- a/login.html
+++ b/login.html
@@ -11,9 +11,9 @@
     <body>
         <div class="full-bg">
             <div id="reg-block" class="bg-l singin-rows-template">
-                <div class="button-panel" style="justify-content:start;font-size:2em">
+                <div class="button-panel x-left" style="font-size:2em">
                     <div class="arrow-left br-d2"></div>
-                    <input type="button" id="back-button" class="button font-d" value="Назад" onclick="window.location.href = 'index.html';">
+                    <input type="button" id="back-button" class="button null-border font-d" value="Назад" onclick="window.location.href = 'index.html';">
                 </div>
                 <div class="login-grid">
                     <div class="text-cell">
@@ -41,7 +41,7 @@
                         <input type="password" class="text-input">
                     </div>
                 </div>
-                    <input type="button" class="button bg-b font-l" id="cac-button" value="Войти">
+                <input type="button" class="button null-border bg-b font-l" id="cac-button" value="Войти">
                 
             </div>
         </div>
