--- a/register.html
+++ b/register.html
@@ -11,9 +11,9 @@
     <body>
         <div class="full-bg">
             <div id="reg-block" class="bg-l singup-rows-template">
-                <div class="button-panel" style="justify-content:start;font-size:2em">
+                <div class="button-panel x-left" style="font-size:2em">
                     <div class="arrow-left br-d2"></div>
-                    <input type="button" id="back-button" class="button font-d" value="Назад" onclick="window.location.href = 'index.html';">
+                    <input type="button" id="back-button" class="button null-border font-d" value="Назад" onclick="window.location.href = 'index.html';">
                 </div>
                 <div class="reg-grid">
                     <div class="text-cell">
@@ -81,7 +81,7 @@
                         <input type="password" class="text-input">
                     </div>
                 </div>
-                    <input type="button" class="button bg-b font-l" id="cac-button" value="Зарегистрироваться">
+                <input type="button" class="button w100-box null-border h100-box bg-b font-l x-center" id="cac-button" value="Зарегистрироваться">
                 
             </div>
         </div>
