--- a/login.html
+++ b/login.html
@@ -41,8 +41,12 @@
                         <input type="password" class="text-input">
                     </div>
                 </div>
-                <input type="button" class="button null-border bg-b font-l" id="cac-button" value="Войти">
-                
+                <div>
+                    <div id=err-state style="display:none">
+                       * Не все поля заполнены
+                    </div>
+                    <input type="button" class="button w100-box null-border h60-box bg-b font-l x-center" id="cac-button" value="Вход">
+                </div>
             </div>
         </div>
         <script src="register.js"></script>
