--- a/profile.html
+++ b/profile.html
@@ -10,7 +10,7 @@
         <script src="profile.js"></script>
      </head>
     <body>
-        <div id="no-log-header" class="bg-d2">
+        <div id="no-log-header" class="header-template-columns bg-d2">
             <div class="logo-element font-r fam-kaus" onclick="window.location.href='index.html';">
             </div>
             <div class="element font-l br-d3" onclick="window.location.href='car-select.html';">
@@ -21,6 +21,26 @@
             </div>
             <div class="element font-l br-d3" onclick="window.location.href='branches.html';">
                 О Нас
+            </div>
+            <div id=nav-menu>
+
+            </div>
+            <div id=vm class=no-display>
+                <div id=vm-grid>
+                    <div class=elem onclick="window.location.href='login.html'">
+                        Вход
+                    </div>
+                    <div class=elem onclick="window.location.href='register.html'">
+                        Регистрация
+                    </div>
+                    <div class=elem onclick="window.location.href='car-select.html'">
+                        Аренда
+                    </div>
+                    
+                    <div class=elem onclick="window.location.href='cards.html'">
+                        Оплата
+                    </div>
+                </div>
             </div>
         </div>
 
