--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         
      </head>
     <body>
-        <div id="no-log-header" class="bg-d2">
+        <div id="no-log-header" class="no-log-header-template-columns bg-d2">
             <div class="logo-element font-r fam-kaus" onclick="window.location.href='index.html';">
             </div>
             <div class="element font-l br-d3" onclick="window.location.href='car-select.html';">
@@ -20,7 +20,29 @@
                 Оплата
             </div>
             <div class="element font-l br-d3" onclick="window.location.href='branches.html';">
-                О Нас
+                Филиалы
+            </div>
+            <div id=nav-menu>
+
+            </div>
+            <div id=vm class=no-display>
+                <div id=vm-grid>
+                    <div class=elem onclick="window.location.href='login.html'">
+                        Вход
+                    </div>
+                    <div class=elem onclick="window.location.href='register.html'">
+                        Регистрация
+                    </div>
+                    <div class=elem onclick="window.location.href='car-select.html'">
+                        Аренда
+                    </div>
+                    <div class=elem onclick="window.location.href='cards.html'">
+                        Оплата 
+                    </div>
+                    <div class=elem onclick="window.location.href='branches.html'">
+                        Филиалы 
+                    </div>
+                </div>
             </div>
         </div>
 
@@ -80,9 +102,6 @@
                     <div class=page-list>
                         <a class="page font-gray" href="branches.html">
                             Филиалы
-                        </a>
-                        <a class="page font-gray" href=about.html>
-                            О Нас
                         </a>
                         <a class="page font-gray" href=profile.html>
                             Личный кабинет
