--- a/cards.html
+++ b/cards.html
@@ -18,7 +18,7 @@
             <div class="full-bg-no-h">
                 <div class="front-bg grid-1x-1y w60-box bg-d">
                     <div id="card-form" class="x-center">
-                        <div class="card-label w100-box xy-center">
+                        <div class="card-label xy-center">
                             <div class="grid-1x-1y">
                                 <div class="card-type-label grid-1x-1y font-white y-center">
                                     
@@ -43,7 +43,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="xy-center grid-1x-1y 100w-box hrel">
+                        <div class="xy-center grid-1x-1y hrel">
                             <input type="button" id="add-btn" class="button wrel hrel" value="Добавить">
                         
                         </div>
