--- a/register.html
+++ b/register.html
@@ -6,7 +6,7 @@
         </title>
         <link href="style.css" rel="stylesheet">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        
+        <meta charset="UTF-8">
     </head>
     <body>
         <div class="full-bg">
