--- a/cards.html
+++ b/cards.html
@@ -27,16 +27,16 @@
                             </div>
                             <div class="grid-3x-3y xy-center">
                                 <div class="cardin-label grid-col-span-3 grid-1x-1y">
-                                    <input type=text class="null-border y-center" id=incn maxlength="19" placeholder="0000-0000-0000-0000"> 
+                                    <input type=text class="input-card null-border y-center" id=incn maxlength="19" placeholder="0000-0000-0000-0000"> 
                                 </div>
                                 <div class="cardin-label grid-1x-1y">
-                                    <input type=text class="null-border y-center" id=inmonth maxlength="2" placeholder="MM">
+                                    <input type=text class="input-card null-border y-center" id=inmonth maxlength="2" placeholder="MM">
                                 </div>
                                 <div class="cardin-label grid-1x-1y" >
-                                    <input type=text class="null-border xy-center" id=inyear maxlength="2" placeholder="YY">
+                                    <input type=text class="input-card null-border xy-center" id=inyear maxlength="2" placeholder="YY">
                                 </div>
                                 <div class="cardin-label grid-1x-1y">
-                                    <input type=text class="null-border x-right y-center" id=incvv maxlength="3" placeholder="CVV">
+                                    <input type=text class="input-card null-border x-right y-center" id=incvv maxlength="3" placeholder="CVV">
                                 </div>
                                 <div class="card-correct-label grid-col-span-3 x-right y-center">
                                     
