--- a/profile.html
+++ b/profile.html
@@ -17,8 +17,7 @@
 
         <div id="content">
             <div class="full-bg-no-h bg-l">
-                <div class="profile-body  bg-d h100-box x-center">
-                    
+                <div class="profile-body bg-d x-center">
                     <div class="profile-header">
                         <div class="grid-1x-1y br-b">
                             <div class="profile-img">
