--- a/profile.html
+++ b/profile.html
@@ -16,7 +16,7 @@
 
 
         <div id="content">
-            <div class="full-bg-no-h bg-l">
+            <div class="profile-bg bg-l">
                 <div class="profile-body bg-d x-center">
                     <div class="profile-header">
                         <div class="grid-1x-1y br-b">
@@ -46,6 +46,7 @@
             
         </div>
         <script src="load_header_profile.js"></script>
+        <script src="cars.js"></script>
         <script src="main.js"></script>
         <script>
             generateHeader();
